WIP: MCP 2026-07-28